// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "2dsphere") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "array") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "arrayType") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "boolean") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "buffer") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "date") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "decimal") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "map") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "mixed") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "number") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
      Object {
        "checked": true,
        "name": "min",
        "short": "min",
        "value": "min",
      },
      Object {
        "checked": true,
        "name": "max",
        "short": "max",
        "value": "max",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": 1,
    "message": "Value must greater than or equal:",
    "name": "min",
    "type": "number",
    "when": [Function],
  },
  Object {
    "default": 10,
    "message": "Value must less than or equal:",
    "name": "max",
    "type": "number",
    "validate": [Function],
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "object") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "objectId") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with maximum on settings (type "string") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": true,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": true,
        "name": "default",
        "short": "default",
        "value": "default",
      },
      Object {
        "checked": true,
        "name": "enum",
        "short": "enum",
        "value": "enum",
      },
      Object {
        "checked": true,
        "name": "match (regexp)",
        "short": "match",
        "value": "match",
      },
      Object {
        "checked": true,
        "name": "trim",
        "short": "trim",
        "value": "trim",
      },
      Object {
        "checked": true,
        "name": "lowercase",
        "short": "lowercase",
        "value": "lowercase",
      },
      Object {
        "checked": true,
        "name": "uppercase",
        "short": "uppercase",
        "value": "uppercase",
      },
      Object {
        "checked": true,
        "name": "minLength",
        "short": "minLength",
        "value": "minLength",
      },
      Object {
        "checked": true,
        "name": "maxLength",
        "short": "maxLength",
        "value": "maxLength",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": "defaultText",
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": "hello; bye",
    "filter": [Function],
    "message": "Allowed enum strings (semicolon [;] as separator):",
    "name": "enum",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": "^[a-zA-Z0-9]+$",
    "message": "RegExp match value (e.g. ^[a-zA-Z0-9]+$ or [a-z]+):",
    "name": "match",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": 1,
    "message": "Minimum number of characters:",
    "name": "minLength",
    "type": "number",
    "when": [Function],
  },
  Object {
    "default": 10,
    "message": "Maximum number of characters:",
    "name": "maxLength",
    "type": "number",
    "validate": [Function],
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "2dsphere") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "array") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "arrayType") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "boolean") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "buffer") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "date") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "decimal") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "map") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "mixed") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "number") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
      Object {
        "checked": false,
        "name": "min",
        "short": "min",
        "value": "min",
      },
      Object {
        "checked": false,
        "name": "max",
        "short": "max",
        "value": "max",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "message": "Value must greater than or equal:",
    "name": "min",
    "type": "number",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "message": "Value must less than or equal:",
    "name": "max",
    "type": "number",
    "validate": [Function],
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "object") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "objectId") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
]
`;

exports[`Check the columnOptions functions Check the columnOptionsQuestions() it should be return choices when the function is called with minimum on settings (type "string") 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "checked": false,
        "name": "required",
        "short": "required",
        "value": "required",
      },
      Object {
        "checked": false,
        "name": "default",
        "short": "default",
        "value": "default",
      },
      Object {
        "checked": false,
        "name": "enum",
        "short": "enum",
        "value": "enum",
      },
      Object {
        "checked": false,
        "name": "match (regexp)",
        "short": "match",
        "value": "match",
      },
      Object {
        "checked": false,
        "name": "trim",
        "short": "trim",
        "value": "trim",
      },
      Object {
        "checked": false,
        "name": "lowercase",
        "short": "lowercase",
        "value": "lowercase",
      },
      Object {
        "checked": false,
        "name": "uppercase",
        "short": "uppercase",
        "value": "uppercase",
      },
      Object {
        "checked": false,
        "name": "minLength",
        "short": "minLength",
        "value": "minLength",
      },
      Object {
        "checked": false,
        "name": "maxLength",
        "short": "maxLength",
        "value": "maxLength",
      },
    ],
    "message": "Choose the scheme options:",
    "name": "options",
    "type": "checkbox",
    "validate": [Function],
  },
  Object {
    "default": undefined,
    "message": "Default value for the column (e.g. Date.now or 'Hello World'):",
    "name": "default",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "filter": [Function],
    "message": "Allowed enum strings (semicolon [;] as separator):",
    "name": "enum",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "message": "RegExp match value (e.g. ^[a-zA-Z0-9]+$ or [a-z]+):",
    "name": "match",
    "type": "input",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "message": "Minimum number of characters:",
    "name": "minLength",
    "type": "number",
    "when": [Function],
  },
  Object {
    "default": undefined,
    "message": "Maximum number of characters:",
    "name": "maxLength",
    "type": "number",
    "validate": [Function],
    "when": [Function],
  },
]
`;
